--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-native": "^0.72.2",
     "@types/react-native-vector-icons": "^6.4.14",
     "react": "18.2.0",
     "react-native": "0.72.3",
